design of copy container

--- a/index.html
+++ b/index.html
@@ -60,20 +60,22 @@
     </div>
   </div>
   <div class="containt">
-    <div  class="btnCopy1 btnCopy">
-      <p class="links1 links">links</p>
-      <p class="shortlinks1 shortlinks"> short links</p>
-      <button class="copy1">Copy</button>
-    </div>
-    <div class="btnCopy2  btnCopy">
-      <p class="links2 links">links</p>
-      <p class="shortlinks2 shortlinks">short links</p>
-      <button class="copy2">Copy</button>
-    </div>
-    <div class="btnCopy3  btnCopy">
-      <p class=" links links3">links</p>
-      <p class="shortlinks3 shortlinks">short links</p>
-      <button class="copy3">Copy</button>
+    <div class="copyContent">
+      <div  class="btnCopy1 btnCopy">
+        <p class="links1 links">links</p>
+        <p class="shortlinks1 shortlinks"> short links</p>
+        <button class="copy1 copied">Copy</button>
+      </div>
+      <div class="btnCopy2  btnCopy">
+        <p class="links2 links">links</p>
+        <p class="shortlinks2 shortlinks">short links</p>
+        <button class="copy2 copied">Copy</button>
+      </div>
+      <div class="btnCopy3  btnCopy">
+        <p class=" links links3">links</p>
+        <p class="shortlinks3 shortlinks">short links</p>
+        <button class="copy3 copied">Copy</button>
+      </div>
     </div>
     <div class="myContaint">
       <h1 class="containtT">Advanced Statistics</h1>
